--- a/de/html/libs/index.html
+++ b/de/html/libs/index.html
@@ -26,7 +26,7 @@
         All of the tools included in Logisim's built-in libraries are documented in this reference material.
       </p>
     <h2>
-      <b><a href="wiring/index.html">Basisbibliothek</a></b>
+      <b><a href="wiring/index.html">Verdrahtungsbibliotheken</a></b>
     </h2>
     <table>
       <tbody>
@@ -193,7 +193,6 @@
         </tr>
       </tbody>
     </table>		
-		
     <h2>
       <b><a href="gates/index.html">Gatterbibliothek</a></b>
     </h2>		
@@ -474,6 +473,94 @@
             <a href="arith/bitfinder.html">Bit-Finder</a>
           </td>
         </tr>
+		<tr>
+            <td align="right">
+              <a href="arith/fpadder.html"><img class="iconlibs" src="../../../icons/6464/adder.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpfpadder.html">Fließkomma-Addierer</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpsubtractor.html"><img class="iconlibs" src="../../../icons/6464/subtractor.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpsubtractor.html">Fließkomma-Subtraktor</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpmultiplier.html"><img class="iconlibs" src="../../../icons/6464/multiplier.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpmultiplier.html">Fließkomma-Multiplikator</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpdivider.html"><img class="iconlibs" src="../../../icons/6464/divider.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpdivider.html">Fließkomma-Teiler</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpnegator.html"><img class="iconlibs" src="../../../icons/6464/negator.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpnegator.html">Fließkomma-Negativierer  </a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpcomparator.html"><img class="iconlibs" src="../../../icons/6464/comparator.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpcomparator.html">Fließkomma-Vergleicher</a>
+            </td>
+          </tr>
+		  <tr>
+		  <td align="right">
+              <a href="arith/fpfptoint.html"><img class="iconlibs" src="../../../icons/6464/ftoi.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpfptoint.html">Fließkomma zu Integer</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="arith/fpinttofp.html"><img class="iconlibs" src="../../../icons/6464/itof.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="arith/fpinttofp.html">Ganzzahl zu Fließkomma</a>
+            </td>
+          </tr>
       </tbody>
     </table>
 	    <h2>
@@ -661,7 +748,7 @@
             <a href="io/hexdig.html">Hexadezimal-Anzeige</a>
           </td>
         </tr>
-        <tr>
+		 <tr>
           <td align="right">
             <a href="io/dotmat.html"><img class="iconlibs" src="../../../icons/6464/dotmat.png" alt="#########" border=0 height="32" width="32"></a>
           </td>
@@ -718,7 +805,69 @@
           </td>
         </tr>
       </tbody>
-    </table>		
+    </table>	
+	 <h2>
+        <b><a id="hlibioextra" href="ioextra/index.html" name="hlibioextra">Input/Output Extra library</a></b>
+      </h2>
+      <table>
+        <tbody>
+          <tr>
+            <td align="right">
+              <a href="ioextra/exswitch.html"><img class="iconlibs" src="../../../icons/6464/switch.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="ioextra/exswitch.html">Schalter</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="ioextra/exbuzzer.html"><img class="iconlibs" src="../../../icons/6464/buzzer.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="ioextra/exbuzzer.html">Buzzer</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="ioextra/exslider.html"><img class="iconlibs" src="../../../icons/6464/slider.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="ioextra/exslider.html">Schieberegler</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="ioextra/exdigosc.html"><img class="iconlibs" src="../../../icons/6464/digitalscope.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="ioextra/exdigosc.html">Digitales Oszilloskop</a>
+            </td>
+          </tr>
+          <tr>
+            <td align="right">
+              <a href="ioextra/expla.html"><img class="iconlibs" src="../../../icons/6464/pla.png" alt="#########" width="32" height="32" border="0"></a>
+            </td>
+            <td>
+              &nbsp;
+            </td>
+            <td>
+              <a href="ioextra/expla.html">Programmierbares Logik-Array</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     <h2>
       <b><a href="tcl/index.html">System On Chip components library</a></b>
     </h2>
