--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -775,57 +775,57 @@
         <tbody>
           <tr>
             <td align="right">
-              <a href="ioextra/switch.html"><img class="iconlibs" src="../../../icons/6464/switch.png" alt="#########" width="32" height="32" border="0"></a>
+              <a href="ioextra/exswitch.html"><img class="iconlibs" src="../../../icons/6464/switch.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
             <td>
               &nbsp;
             </td>
             <td>
-              <a href="ioextra/switch.html">Swicth</a>
+              <a href="ioextra/exswitch.html">Commutateur</a>
             </td>
           </tr>
           <tr>
             <td align="right">
-              <a href="ioextra/buzzer.html"><img class="iconlibs" src="../../../icons/6464/buzzer.png" alt="#########" width="32" height="32" border="0"></a>
+              <a href="ioextra/exbuzzer.html"><img class="iconlibs" src="../../../icons/6464/buzzer.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
             <td>
               &nbsp;
             </td>
             <td>
-              <a href="ioextra/buzzer.html">Buzzer</a>
+              <a href="ioextra/exbuzzer.html">Buzzer</a>
             </td>
           </tr>
           <tr>
             <td align="right">
-              <a href="ioextra/slider.html"><img class="iconlibs" src="../../../icons/6464/slider.png" alt="#########" width="32" height="32" border="0"></a>
+              <a href="ioextra/exslider.html"><img class="iconlibs" src="../../../icons/6464/slider.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
             <td>
               &nbsp;
             </td>
             <td>
-              <a href="ioextra/slider.html">Slider</a>
+              <a href="ioextra/exslider.html">Curseur</a>
             </td>
           </tr>
           <tr>
             <td align="right">
-              <a href="ioextra/digitalscope.html"><img class="iconlibs" src="../../../icons/6464/digitalscope.png" alt="#########" width="32" height="32" border="0"></a>
+              <a href="ioextra/exdigosc.html"><img class="iconlibs" src="../../../icons/6464/digitalscope.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
             <td>
               &nbsp;
             </td>
             <td>
-              <a href="ioextra/digitalscope.html">Digital oscilloscope</a>
+              <a href="ioextra/exdigosc.html">Oscilloscope numérique</a>
             </td>
           </tr>
           <tr>
             <td align="right">
-              <a href="ioextra/pla.html"><img class="iconlibs" src="../../../icons/6464/pla.png" alt="#########" width="32" height="32" border="0"></a>
+              <a href="ioextra/expla.html"><img class="iconlibs" src="../../../icons/6464/pla.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
             <td>
               &nbsp;
             </td>
             <td>
-              <a href="ioextra/pla.html">pla</a>
+              <a href="ioextra/expla.html">Réseau logique programmable</a>
             </td>
           </tr>
         </tbody>
