--- a/libstatus.html
+++ b/libstatus.html
@@ -438,8 +438,8 @@
 		<td align="left"></td>
 		<td align="left">Programmable logic array</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/gates/pla.html">_C</a></td>
-		<td align="center" class="needtask"><a href="./fr/html/libs/gates/pla.html">_C</a></td>
+		<td align="center" class="needtask"><a href="./en/html/libs/gates/pla.html">_V</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/gates/pla.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/gates/pla.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/gates/pla.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/gates/pla.html">__</a></td>
@@ -1203,7 +1203,7 @@
 		<td align="left">Port I/O</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/portio.html">_V</a></td>
-		<td align="center" class="good"><a href="./fr/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/portio.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/portio.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/portio.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/io/portio.html">__</a></td>
@@ -1237,7 +1237,7 @@
 		<td align="left">Video RVB</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/rgbvideo.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/rgbvideo.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/rgbvideo.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/rgbvideo.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/io/rgbvideo.html">__</a></td>
@@ -1248,12 +1248,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="center"></td>
 		<td align="left" class="title"  colspan="2">Input/Output extra</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/index.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/ioextra/index.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/ioextra/index.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/index.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/index.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/index.html">__</a></td>
@@ -1264,51 +1264,51 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Switch</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/switch.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/switch.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/switch.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/switch.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/switch.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/switch.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/exswitch.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/ioextra/exswitch.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/exswitch.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/exswitch.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/exswitch.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/exswitch.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Buzzer</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/buzzer.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/buzzer.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/buzzer.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/buzzer.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/buzzer.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/buzzer.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/exbuzzer.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/ioextra/exbuzzer.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/exbuzzer.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/exbuzzer.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/exbuzzer.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/exbuzzer.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Slider</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/slider.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/slider.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/slider.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/slider.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/slider.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/slider.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/exslider.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/ioextra/exslider.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/exslider.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/exslider.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/exslider.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/exslider.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1320,12 +1320,12 @@
 		<td align="left"></td>
 		<td align="left">Digital oscilloscope</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/digscop.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/digscop.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/digscop.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/digscop.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/digscop.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/digscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/exdigscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/exdigscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/exdigscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/exdigscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/exdigscop.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/exdigscop.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1337,12 +1337,12 @@
 		<td align="left"></td>
 		<td align="left">PLA</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/pla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/pla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/pla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/pla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/pla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/pla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./fr/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/expla.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
