--- a/en/html/guide/about/index.html
+++ b/en/html/guide/about/index.html
@@ -148,7 +148,7 @@
 		You can find the reference on the <a href="https://github.com/logisim-evolution/logisim-evolution/blob/master/README.md">logisim-evolution</a> page in the Credits section.
       </p>
       <p>
-        <strong>Next: </strong> <em><a href="../index.html">User Guide</a></em>.
+        <strong>Next: </strong> <a href="../index.html">User Guide</a>.
       </p>
     </div>
   </body>
