--- a/fr/html/libs/ioextra/exdigosc.html
+++ b/fr/html/libs/ioextra/exdigosc.html
@@ -40,7 +40,7 @@
               <strong>Apparence :</strong>
             </td>
             <td valign="top">
-              <img class="appearancelibs" src="../../../../img-libs/digitalscope.png" alt="#########" width="64" height="64">
+              <img  src="../../../../img-libs/digitalscope.png" alt="#########">
             </td>
           </tr>
         </tbody>
@@ -49,6 +49,7 @@
         Comportement
       </h2>
       <p>
+	    
       </p>
       <h2>
         Broches
