--- a/libstatus.html
+++ b/libstatus.html
@@ -1337,12 +1337,12 @@
 		<td align="left"></td>
 		<td align="left">PLA</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/expla.html">__</a></td>
-		<td align="center" class="needtask"><a href="./fr/html/libs/ioextra/expla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/expla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/expla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/expla.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/expla.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./en/html/libs/ioextra/explarom.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/ioextra/explarom.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/ioextra/explarom.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/ioextra/explarom.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/ioextra/explarom.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/ioextra/explarom.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
