--- a/pt/html/guide/gui/gui-attribut.html
+++ b/pt/html/guide/gui/gui-attribut.html
@@ -26,7 +26,7 @@
         A tela abaixo demonstra o que as coisas irá aparecer depois que selecionar a entrada superior do circuito XOR e rolar para baixo até ver o atributo <b class="property">Fonte do Rótulo</b> (Label Font).
       </p>
       <p align="center">
-        <img src="../../../img-guide/gui-3-pin-attrib.png" width="505" height="301" alt="#########">
+        <img src="../../../img-guide/gui-3-pin-attrib.png"  alt="#########">
       </p>
       <p>
         Para modificar um valor de atributo, clique sobre o valor. A interface para modificar o atributo vai depender de qual atributo quiser mudar, no caso de ser a <b class="property">Fonte do Rótulo</b> do atributo, uma caixa de diálogo aparecerá para selecionar a nova fonte; mas alguns atributos (como <b class="property">Rótulo</b>) permitirão que você edite o valor em um campo de texto, enquanto outros (como a Direção do Rótulo) serão exibidos em um menu drop-down a partir do qual poderá escolher o valor.
