--- a/pt/html/guide/gui/gui-attrcomp.html
+++ b/pt/html/guide/gui/gui-attrcomp.html
@@ -23,13 +23,13 @@
         Por exemplo, suponha que se queira criar portas AND pequenas. No momento, cada vez que selecionar a ferramenta, uma porta AND grande será criada. Mas, se editar o atributo de tamanho da porta, logo após selecionar a ferramenta (antes de colocar a porta AND no circuito), irá mudar os atributos para a ferramenta, de modo que futuras portas AND acrescentadas pela ferramenta serão pequenas.
       </p>
       <p align="center">
-        <img src="../../../img-guide/gui-4-and-narrow.png" width="505" height="301" alt="#########">
+        <img src="../../../img-guide/gui-4-and-narrow.png" alt="#########">
       </p>
       <p>
         Agora, as duas ANDs já existentes poderão ser excluídas e duas novas adicionadas em seu lugar. Desta vez, eles serão pequenas. (Se você optar por reduzir o número de entradas para 3, a porta AND não terá extensão vertical no lado esquerdo. Mas você também terá que religar ao circuito as conexões que cheguem à porta AND daquele lado.)
       </p>
 <p align="center">
-        <img src="../../../img-guide/gui-5-and-replace.png" width="505" height="299" alt="#########">
+        <img src="../../../img-guide/gui-5-and-replace.png" alt="#########">
       </p>
       <p>
         Para algumas ferramentas, os ícones que as representam refletem alguns dos valores de seus atributos. Um exemplo disso é a ferramenta Pino, cujo ícone mostra a mesma informação que o seu atributo de direção (Facing).
@@ -47,7 +47,7 @@
         O Logisim oferece um atalho útil para se alterar o atributo Direção que controla aquela em que muitos componentes se orientam: bastar apertar a tecla da seta, enquanto que a ferramenta for selecionada e automaticamente alterará a direção do componente.
       </p>
       <p>
-        <strong>Próximo:</strong><a href="gui-toolsbar.html">Guia do usuário</a>.
+        <strong>Próximo: </strong><a href="index.html">Guia do usuário</a>.
       </p>
     </div>
   </body>
